Off topic: Fix comparison table header with extra spacing on the top

--- a/src/components/EtlToolsXvsYPage/Comparison/styles.module.less
+++ b/src/components/EtlToolsXvsYPage/Comparison/styles.module.less
@@ -51,7 +51,7 @@
 
     thead th:not(:first-of-type) {
       position: sticky;
-      top: 116px;
+      top: 80px;
       padding: 0;
     }
 
